# FORGE-CLI

./: .gitignore  README.md  pyproject.toml  tm.py
forge_cli/: cli.py  config.py  db.py
forge_cli/commands/: plan.py  project.py  task.py
forge_cli/utils/: display.py  fmt.py
