[project]
name = "forge-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "AccursedGalaxy",email = "robinbohrer7@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
]

[project.scripts]
tm = "forge_cli.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
